# xela_apps

./: README.md
sim_xela_server/: CMakeLists.txt  README.md  README.textile  fsd_sim_xela_server.md  fsd_sim_xela_server.textile  package.xml
sim_xela_server/config/: replayer_presets.yaml
sim_xela_server/demo/: uSPrDS.ini  uSPrHE35.ini  xServ.ini
sim_xela_server/launch/: sim_xela_server.launch.py
sim_xela_server/resource/: XR23AHLCPP.json  XR23AHRCPP.json  uSPa35.json  uSPa46.json  uSPr2F.json  uSPrDS.json
sim_xela_server/src/: sim_xela_server.cpp
std_xela_taxel_viz_2f/: CMakeLists.txt  README.md  design_std_xela_taxel_viz_2f.md  fsd_std_xela_taxel_viz_2f.md  package.xml
std_xela_taxel_viz_2f/config/base/: std_xela_taxel_viz_2f.yaml
std_xela_taxel_viz_2f/config/joints/: joint_state_profiles.yaml
std_xela_taxel_viz_2f/config/rviz/: grid_xela_taxel_viz_2f.rviz  urdf_xela_taxel_viz_2f.rviz
std_xela_taxel_viz_2f/description/: xela_uSPrDS_2_modules.xacro
std_xela_taxel_viz_2f/launch/: real_all_svc_std_xela_taxel_viz_2f.launch.py  sim_all_svc_std_xela_taxel_viz_2f.launch.py  std_xela_taxel_viz_2f.launch.py
std_xela_taxel_viz_2f/src/: std_xela_taxel_viz_2f.cpp
std_xela_taxel_viz_ahv4/: CMakeLists.txt  README.md  design_std_xela_taxel_viz_ahv4.md  fsd_std_xela_taxel_viz_ahv4.md  package.xml
std_xela_taxel_viz_ahv4/config/base/: std_xela_taxel_viz_ahv4.yaml
std_xela_taxel_viz_ahv4/config/joints/: joint_state_profiles.yaml
std_xela_taxel_viz_ahv4/config/patterns/: pattern_rahv4.yaml
std_xela_taxel_viz_ahv4/config/rviz/: grid_xela_taxel_viz_ah.rviz  urdf_xela_taxel_viz_ah.rviz
std_xela_taxel_viz_ahv4/launch/: real_all_svc_std_xela_taxel_viz_ahv4.launch.py  sim_all_svc_std_xela_taxel_viz_ahv4.launch.py  sim_all_svc_std_xela_taxel_viz_ahv4_mock.launch.py  std_xela_taxel_viz_ahv4.launch.py
std_xela_taxel_viz_ahv4/scripts/: csv_to_pattern_yaml.py
std_xela_taxel_viz_ahv4/src/: std_xela_joint_state_publisher.cpp  std_xela_taxel_viz_ahv4.cpp  std_xela_taxel_viz_ahv4_demo.cpp
xela_server2_2f/: CMakeLists.txt  LAUNCH.md  LAUNCH.redmine  README.md  README.redmine  checklist_xela_server2_2f.md  checklist_xela_server2_2f.redmine  design_xela_server2_2f.md  design_xela_server2_2f.redmine  fsd_xela_server2_2f.md  fsd_xela_server2_2f.redmine  package.xml
xela_server2_2f/config/: server2_2f_config.yaml  xela_server2_2f_params.yaml
xela_server2_2f/include/xela_server2_2f/: frame_ids.hpp  parser.hpp
xela_server2_2f/launch/: xela_server2_2f_with_replayer.launch.py  xela_server2_2f_with_server.launch.py
xela_server2_2f/scripts/: can_setup.sh
xela_server2_2f/src/: frame_ids.cpp  node.cpp  parser.cpp
xela_server2_2f/test/: test_parser.cpp
xela_server2_ah/: CMakeLists.txt  E2E_TEST.md  E2E_TEST.textile  README.md  README.textile  design_xela_server2_ah.md  design_xela_server2_ah.textile  fsd_xela_server2_ah.md  fsd_xela_server2_ah.textile  package.xml
xela_server2_ah/config/: server2_ah_config.yaml  server_model_joint_map.yaml
xela_server2_ah/include/xela_server2_ah/: ah_joint_map.hpp  ah_parser.hpp
xela_server2_ah/launch/: xela_server2_ah.launch.py  xela_server2_ah_with_mock_server.launch.py  xela_server2_ah_with_replayer.launch.py  xela_server2_ah_with_replayer_and_viz.launch.py
xela_server2_ah/src/: ah_joint_map.cpp  ah_node.cpp  ah_parser.cpp
xela_taxel_sidecar_2f/: CMakeLists.txt  README.md  README.textile  design_xela_taxel_sidecar_2f.md  design_xela_taxel_sidecar_2f.textile  package.xml  telemetry_non_web_use_cases_2f.md  xela_taxel_sidecar_2f.md  xela_taxel_sidecar_2f.textile
xela_taxel_sidecar_2f/docs/: runtime_wiring_diagram.dot
xela_taxel_sidecar_2f/launch/: xela_taxel_sidecar.launch.py  xela_taxel_sidecar_cpp.launch.py
xela_taxel_sidecar_2f/scripts/: sidecar_http_server.py  xela_taxel_web_bridge.py  xela_viz_mode_manager.py
xela_taxel_sidecar_2f/src/: xela_taxel_web_bridge_node.cpp  xela_viz_mode_manager_node.cpp
xela_taxel_sidecar_2f/web/taxel_sidecar/: index.html
xela_taxel_sidecar_ah/: CMakeLists.txt  README.md  README.textile  design_xela_taxel_sidecar_ah.md  design_xela_taxel_sidecar_ah.textile  package.xml  xela_taxel_sidecar_ah.md  xela_taxel_sidecar_ah.textile
xela_taxel_sidecar_ah/docs/: architecture_overview.dot
xela_taxel_sidecar_ah/launch/: xela_taxel_sidecar.launch.py  xela_taxel_sidecar_cpp.launch.py
xela_taxel_sidecar_ah/scripts/: xela_taxel_web_bridge.py  xela_viz_mode_manager.py
xela_taxel_sidecar_ah/src/: xela_taxel_web_bridge_node.cpp  xela_viz_mode_manager_node.cpp
xela_taxel_sidecar_ah/web/taxel_sidecar/: index.html
xela_taxel_viz_2f/: CMakeLists.txt  README.md  README.textile  design_xela_taxel_viz_2f.md  design_xela_taxel_viz_2f.textile  fsd_xela_taxel_viz_2f.md  fsd_xela_taxel_viz_2f.textile  package.xml
xela_taxel_viz_2f/config/: base.yaml  grid_xela_taxel_viz_2f.rviz  urdf_xela_taxel_viz_2f.rviz
xela_taxel_viz_2f/config/legacy/: ros2_controllers_xela_taxel_viz_2f.yaml  xela_taxel_viz_2f.yaml
xela_taxel_viz_2f/description/: xela_uSPr2F_2_modules.xacro  xela_uSPrHE35_2_modules.xacro
xela_taxel_viz_2f/launch/: real_all_svc_xela_taxel_viz_2f.launch.py  sim_all_svc_xela_taxel_viz_2f.launch.py  xela_taxel_viz_2f.launch.py
xela_taxel_viz_2f/src/: xela_taxel_viz_2f.cpp
xela_taxel_viz_ahv4/: CMakeLists.txt  README.md  README.textile  design_xela_taxel_viz_ahv4.md  design_xela_taxel_viz_ahv4.textile  fsd_xela_taxel_viz_ahv4.md  fsd_xela_taxel_viz_ahv4.textile  package.xml
xela_taxel_viz_ahv4/config/: grid_xela_taxel_viz_ah.rviz  pattern_lahv4.yaml  ros2_controller_hand_xela_taxel_viz_ahv4.yaml  ros2_controller_xela_taxel_viz_ahv4.yaml  taxel_joint_map_new.yaml  urdf_xela_taxel_viz_ah.rviz  xela_taxel_viz_ahv4.yaml
xela_taxel_viz_ahv4/description/: xela_uSCuAH_0_modules.xacro  xela_uSCuAH_1_modules.xacro
xela_taxel_viz_ahv4/launch/: sim_all_svc_xela_taxel_viz_ahv4.launch.py  xela_taxel_viz_ahv4.launch.py  xela_taxel_viz_ahv4_demo.launch.py
xela_taxel_viz_ahv4/scripts/: l-ah.csv  r-ah.csv
xela_taxel_viz_ahv4/src/: xela_taxel_viz_ahv4.cpp  xela_taxel_viz_ahv4_demo.cpp
(+24 files in other folders)
