<?xml version="1.0"?>
<package format="3">
  <name>sim_xela_server</name>
  <version>0.0.1</version>
  <description>WebSocket replayer server for Xela taxel JSON data.</description>
  <maintainer email="invokelee@todo.local">invokelee</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>boost</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
