<?xml version="1.0"?>
<package format="3">
  <name>xela_server2_ah</name>
  <version>0.0.1</version>
  <description>WebSocket to XTaxelSensorArray bridge for Allegro Hand (AH).</description>
  <maintainer email="invokelee@todo.local">invokelee</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>xela_taxel_msgs</depend>
  <depend>xela_server_ros2</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>
  <depend>boost</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sim_xela_server</exec_depend>
  <exec_depend>xela_atag_mock_server</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
