<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xela_taxel_sidecar_ah</name>
  <version>0.1.0</version>
  <description>Common Allegro Hand web sidecar package for Xela taxel visualization.</description>
  <maintainer email="sanghoon.lee@xelarobotics.com">invokelee</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>
  <depend>xela_taxel_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>std_xela_taxel_viz_ahv4</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
